[package]
name = "bevy_atari"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_winit",
  "bevy/bevy_render2",
]

native = [
  # "bevy/bevy_wgpu",
]

web = [
]

x11 = [
  "winit/x11"
]

[dependencies]
bevy = { path="../bevy", default_features=false}
crevice = { path = "../bevy/crates/crevice", version = "0.6.0" }

winit = {version = "0.25.0", features = ["web-sys"], default-features = false}
emulator_6502 = {version="1.1.0", features=["binary_coded_decimal", "implementation_transparency"]}
disasm6502 = "0.2"
rand = {version = "0.8", features = ["small_rng"]}
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
once_cell = "1.5.2"
parking_lot = "0.11.1"
bitflags = "1.2"
lru = "0.6"
anyhow = "1.0"
flate2 = "1.0"
gilrs = {version="0.8", features = ["wasm-bindgen"]}
gilrs-core = {version="0.3"}
js-sys = "0.3"

bevy_atari_antic = {path="./bevy-atari-antic/"}

[dependencies.web-sys]
version = "0.3"
features = [
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioBufferSourceNode',
  'AudioBuffer',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'Window',
  'Location',
  'MessagePort',
  'Storage',
]

[patch.crates-io]
# bevy = {git = "https://github.com/mrk-its/bevy", branch="force_fps", default-features=false}
# bevy = { git = "https://github.com/bevyengine/bevy/", branch = "main", default-features=false }
# bevy = {path = "../bevy", default-features=false}
gilrs = {git = "https://gitlab.com/gilrs-project/gilrs/"}
gilrs-core = {git = "https://gitlab.com/gilrs-project/gilrs/"}
wgpu = {path = "../wgpu/wgpu/"}

# [profile.dev.package."*"]
# opt-level = 2
# debug = false
# debug-assertions = false
# overflow-checks = false
# incremental = true
# codegen-units = 16

[profile.dev]
opt-level = 2
# debug = false
# debug-assertions = false
# overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

# [profile.release.package."*"]
# codegen-units = 1
# opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
# opt-level = 's'
