[package]
name = "bevy_atari"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  # "bevy/bevy_render2",
  "bevy/bevy_gilrs",
]

native = [
]

web = [
]

# x11 = [
#   "winit/x11"
# ]

[dependencies]
tracing-wasm = "0.2.1"
bevy_egui = "0.7"
# winit = {version = "0.25.0", features = ["web-sys"], default-features = false}
emulator_6502 = {version="1.1.0", features=["binary_coded_decimal", "implementation_transparency", "illegal_opcodes"]}
disasm6502 = "0.2"
rand = {version = "0.8", features = ["small_rng"]}
wasm-bindgen = "0.2"
once_cell = "1.5.2"
parking_lot = "0.11"
bitflags = "1.2"
flate2 = "1.0"
gilrs = {version="0.8", features = ["wasm-bindgen"]}
js-sys = "0.3"
# wee_alloc = {version="0.4.5", features = ["static_array_backend"]}
bevy_atari_antic = {path="./bevy-atari-antic/"}

[dependencies.bevy]
git = "https://github.com/mrk-its/bevy"
branch = "bevy_atari"
# path = "../bevy"
default_features = false

[dependencies.web-sys]
version = "0.3"
features = [
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioBufferSourceNode',
  'AudioBuffer',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'Window',
  'Location',
  'MessagePort',
  'Storage',
]

[patch.crates-io]
gilrs = {path = "../gilrs/gilrs"}
gilrs-core = {path = "../gilrs/gilrs-core"}

glow = {git="https://github.com/grovesNL/glow"}
naga = {git="https://github.com/gfx-rs/naga", rev="29571cc"}

[patch.crates-io.wgpu]
#git = "https://github.com/mrk-its/wgpu"
#branch = "master"
path = "../wgpu/wgpu"

[patch.crates-io.emulator_6502]
git = "https://github.com/mrk-its/emulator_6502/"
branch="speed_improvements"

[patch.crates-io.bevy_egui]
path = "../bevy_egui"

[patch."https://github.com/bevyengine/bevy"]
bevy = {git="https://github.com/mrk-its/bevy", branch="bevy_atari"}

# [profile.dev.package."*"]
# opt-level = 2
# debug = false
# debug-assertions = false
# overflow-checks = false
# incremental = true
# codegen-units = 16

# wgpu = {path="../wgpu/wgpu/"}
# glow = {path="../glow"}

[profile.dev]
opt-level = 2
# debug = false
# debug-assertions = false
# overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

# [profile.release.package."*"]
# codegen-units = 1
# opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
# opt-level = 's'
